--- a/app/views/candidates/index.html.erb
+++ b/app/views/candidates/index.html.erb
@@ -1,24 +1,34 @@
+<div class="container">
 <h1>候選人列表</h1>
 
 <%= link_to "新增候選人", new_candidate_path %>
 
-<table>
+<table class="table">
 	<thead>
 		<tr>
+			<td>投票</td>
 			<td>候選人姓名</td>
 		    <td>政黨</td>
 			<td>政見</td>
 			<td>得票數</td>
+			<td>處理</td>
 		</tr>
 	</thead>
 	<tbody>
 		<% @candidates.each do |candidate| %>
 		<tr>
-		  <td><%= candidate.name %>(年齡：<%= candidate.age %> 歲)</td>
+		  <td><%= show_vote(candidate.vote.size, limit: 5) %></td>
+		  <td><%= link_to "投票給這位", vote_candidate_path(candidate), method: "post", class: "btn btn-xs btn-danger" %></td>
+		  <td><%= show_age(candidate) %></td>
 		  <td><%= candidate.party %></td>
 		  <td><%= candidate.politics %></td>
-		  <td><%= candidate.votes %></td>
+		  <td><%= candidate.vote_logs.size %></td>
+   		  <td>
+   		  	<%= link_to "修改", edit_candidate_path(candidate)%>
+   		  	<%= link_to "刪除", candidate_path(candidate), method: "delete", data: { confirm: "確認刪除" } %>
+   		  </td>
 		</tr>
 		<% end %>
 	</tbody>
 </table>
+</div>
